--- a/templates/indexproject.html
+++ b/templates/indexproject.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ObjectDetection-YOLOv8</title>
+    <title>QuantumSuit Detection - Advanced Protective Gear AI</title>
     <style>
         body{
         font-family:Helvetica, sans-serif;
@@ -23,9 +23,10 @@
         height:800px;
         background-color:blue;
         margin-top:-30px;
-        background-image:url("../static/images/front.png");
-        background-size:100%;
+        background-image:url("../static/images/front2.jpg");
+        background-size:cover;
         background-position:center;
+        background-repeat:no-repeat;
         }
         ul{
         list-style:none;
@@ -135,31 +136,31 @@
 
 
     <section class="details">
-        <h1>Sample Results</h1>
+        <h1>Quantum Suit Detection Results</h1>
 
     </section>
     <section class="features">
         <figure>
-            <img src="../static/images/1.png" alt="YOLOv8 Results 1">
-            <figcaption>YOLOv8 Results 1</figcaption>
+            <img src="../static/images/1.png" alt="Quantum Suit Detection Results 1">
+            <figcaption>Quantum Gear Detection 1</figcaption>
         </figure>
         <figure>
-            <img src="../static/images/2.png" alt="YOLOv8 Results 2">
-            <figcaption>YOLOv8 Results 2</figcaption>
+            <img src="../static/images/2.png" alt="Quantum Suit Detection Results 2">
+            <figcaption>Quantum Gear Detection 2</figcaption>
         </figure>
         <figure>
-            <img src="../static/images/3.png" alt="YOLOv8 Results 3">
-            <figcaption>YOLOv8 Results 3</figcaption>
+            <img src="../static/images/3.png" alt="Quantum Suit Detection Results 3">
+            <figcaption>Quantum Gear Detection 3</figcaption>
     </figure>
     </section>
     <div class="main">
         <div class="subpart1">
-            <h1>PPE Safety Kit Object Detection</h1><br>
+            <h1>Quantum Suit Protective Gear Detection</h1><br>
             <h4>Overview</h4>
-            <p>This project aims to detect PPE safety kits (Personal Protective Equipment) using YOLO (You Only Look Once) object detection algorithm. The model can detect various types of equipment including 'Hardhat', 'Mask', 'NO-Hardhat', 'NO-Mask', 'NO-Safety Vest', 'Person', 'Safety Cone','Safety Vest', 'machinery', 'vehicle' .The target audience for this project includes individuals or organizations who want to ensure the safety of their employees or people working in hazardous environments.</p><br>
+            <p>This project aims to detect quantum suit protective gears using advanced YOLO (You Only Look Once) object detection algorithm. The model specializes in identifying next-generation protective equipment including quantum-enhanced hardhats, advanced protective masks, quantum safety vests, energy shields, and other futuristic safety gear. The target audience includes research facilities, quantum laboratories, and organizations working with cutting-edge technology who need to ensure their personnel are properly equipped with quantum-grade protective equipment.</p><br>
             
             <h4>Dataset</h4>
-            <p>We used the PPE detection dataset available on Roboflow for training our model. The dataset contains images of people wearing PPE equipment in different environments.Dataset is annotated and have classes = ['Hardhat', 'Mask', 'NO-Hardhat', 'NO-Mask', 'NO-Safety Vest', 'Person', 'Safety Cone','Safety Vest', 'machinery','vehicle'] . Training set contains 2.6k images , validation set contains 114 images and Testing set contains 82 images. Input dimensions of single image is 640x640</p><br>
+            <p>We have developed a specialized dataset for quantum suit protective gear detection, featuring images of personnel wearing advanced quantum protective equipment in various high-tech environments. The dataset is annotated with classes specifically designed for quantum gear including quantum hardhats, energy masks, quantum safety vests, shield generators, and other advanced protective technologies. The training set contains carefully curated images of quantum protective gear in different lighting conditions and environments. Input dimensions are optimized at 640x640 for precise detection of quantum suit components.</p><br>
             
             
 
@@ -167,9 +168,10 @@
 
       <div class="subpart2"><figure>
       <img src="../static/images/1.png"  alt="Image Missing">
-          <figcaption>Sample Results</figcaption>
+          <figcaption>Quantum Suit Detection Results</figcaption>
         </figure>
       </div>
   </div>
 
-
+</body>
+</html>
